@@ -31,7 +31,7 @@ public class MonitorTextRenderer implements IMonitorRenderer {
     public void render(CentralMonitorMachine machine, MonitorGroup group, float partialTick, PoseStack poseStack,
                        MultiBufferSource buffer, int packedLight, int packedOverlay) {
         try {
-            BlockPos rel = group.getRow(0, machine::toRelative).get(0);
+            BlockPos rel = group.getRow(0, machine::toRelative).getFirst();
             int row = 0;
             int columns = group.getRow(0, machine::toRelative).size();
             poseStack.translate(rel.getX(), rel.getY(), rel.getZ());
@@ -42,7 +42,7 @@ public class MonitorTextRenderer implements IMonitorRenderer {
                 float maxY = graphics.y2();
                 if (maxX == Math.floor(maxX)) maxX--;
                 if (maxY == Math.floor(maxY)) maxY--;
-                BlockPos relativePos = rel.offset(Mth.floor(maxX), -Mth.floor(maxY), 0);
+                BlockPos relativePos = rel.offset(Mth.floor(maxX), Mth.floor(maxY), 0);
                 if (!group.getMonitorPositions().stream().map(machine::toRelative).toList().contains(relativePos))
                     continue;
                 poseStack.pushPose();
